--- a/<blog.html
+++ b/<blog.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title>  El titulo de blog</title>
+    <link rel="stylesheet" href="estilos.css">
+
+
 </head>
 <body>
     <h1> Enfrenta con exito los desafiios de la era digital</h1>
