--- a/<blog.html
+++ b/<blog.html
@@ -10,6 +10,7 @@
     <p> Adquier las habilidades mas demandadas por las sociedades digitales
         
     </p>
+    <h2> Quieres ser parte de los buenos</h2>
 </body>
 
 
